# iron-kaleidoscope

./: .gitignore  COPYRIGHT  Cargo.toml  Makefile  README.in.md  README.md  build.rs  configure  grammar.ebnf
chapters/0/: Cargo.toml
chapters/0/src/: driver.rs  lexer.rs  lib.rs  main.rs
chapters/0/templates/: driver.rs.in  lib.rs.in  main.rs.in  templates.list
chapters/1/: Cargo.toml
chapters/1/src/: driver.rs  lexer.rs  lib.rs  main.rs  (+1 more)
chapters/2/: Cargo.toml
chapters/3/: Cargo.toml
chapters/3/src/: builder.rs  driver.rs  jitter.rs  lib.rs
chapters/3/templates/: builder.rs.in  jitter.rs.in  lib.rs.in  main.rs.in  parser.rs.in
chapters/6/: Cargo.toml
examples/: mandel.ks  plot.ks
iron-llvm/: .gitignore  CMakeCache.txt  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  cmake_install.cmake
iron-llvm/src/: target.rs
iron-llvm/wrappers/: CMakeLists.txt  memory-manager-wrappers.cc  memory-manager-wrappers.hh  support-wrappers.cc
iron-llvm2/src/: lib.rs
iron-llvm2/wrappers/: support-wrappers.hh
scripts/: build-all.sh  clean-all.sh  compile-all.sh  generate-all.sh  generate-chapter.sh  generate-chapters.sh  generate-from-template.py  generate-readme.py  generate-readme.sh  show-all-not-marked.sh  show-not-marked.py  snippets.py  update-all.sh
src/: builder.rs  driver.rs  filer.rs  ir_builder.rs  jitter.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/etc/: mklldeps.py
src/missing_llvm_bindings/: llvm_initialization.c  mod.rs
stdlib/: stdlib.ks
translator/: Cargo.toml
translator/compiler-rt/: compiler-rt.c
translator/src/: main.rs
(+56 files in other folders)
